Bug 460899 - KRunner plugins do not use user-defined keywords.
Summary: KRunner plugins do not use user-defined keywords.
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-23 14:20 UTC by Lemuel Simon
Modified: 2022-10-24 21:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lemuel Simon 2022-10-23 14:20:17 UTC
SUMMARY
KRunner does not use any of the user-defined keywords to trigger specific searches with a given plugin. It always uses the default setting, even after restarting Plasma or KRunner. 


STEPS TO REPRODUCE
1. Go to System Settings
2. Go to Plasma Search
3. Find any plugin with custom keyword support (only Dictionary, Terminate Applications and Spell Checking plugins were tested).
4. Change the keyword/trigger word.
5. Apply changes and try a keyword in KRunner via the Kickoff or plain KRunner.

OBSERVED RESULT
None of the plugins will use the user-defined keywords.

EXPECTED RESULT
The custom keywords would trigger a specific plugin.

Operating System: openSUSE Leap 15.4
KDE Plasma Version: 5.26.1
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 5.14.21-150400.24.21-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3320M CPU @ 2.60GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4000
Manufacturer: LENOVO
Product Name: 2347G2U
System Version: ThinkPad T430

ADDITIONAL INFORMATION
I've tried these keywords:

Terminate Applications:  !k, !t, die, k, t
Dictionary: !d, !def, def
Spell Checking: !sp, sp

This problem is not very new, as I've had it since 5.24.1...I'm somewhat lazy when it comes to bug reports.
Comment 1 Bug Janitor Service 2022-10-24 18:18:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/259
Comment 2 Alexander Lohnau 2022-10-24 18:21:43 UTC
The dictionary runner works fine for me.
Comment 3 Bug Janitor Service 2022-10-24 18:33:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2261
Comment 4 Alexander Lohnau 2022-10-24 21:30:20 UTC
Git commit d9de0252dfced4c3c28a188aba985566e2a03de8 by Alexander Lohnau.
Committed on 24/10/2022 at 18:32.
Pushed by ngraham into branch 'master'.

runners/kill: Fix config group name mismatch

We would write in a different group than we read. This was caused by the renaming
of the plugin id, which was needed to fix another bug.

M  +1    -0    runners/kill/CMakeLists.txt
M  +2    -2    runners/kill/killrunner_config.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d9de0252dfced4c3c28a188aba985566e2a03de8
Comment 5 Nate Graham 2022-10-24 21:30:47 UTC
Git commit bfdcaa503d2b19e9084f802253446aead14e09da by Nate Graham, on behalf of Alexander Lohnau.
Committed on 24/10/2022 at 21:30.
Pushed by ngraham into branch 'Plasma/5.26'.

runners/kill: Fix config group name mismatch

We would write in a different group than we read. This was caused by the renaming
of the plugin id, which was needed to fix another bug.


(cherry picked from commit d9de0252dfced4c3c28a188aba985566e2a03de8)

M  +1    -0    runners/kill/CMakeLists.txt
M  +2    -2    runners/kill/killrunner_config.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/bfdcaa503d2b19e9084f802253446aead14e09da
Comment 6 Alexander Lohnau 2022-10-24 21:31:18 UTC
Git commit aecc2331dbe059a27fb485c7e902d20c6f611c9c by Alexander Lohnau.
Committed on 24/10/2022 at 18:18.
Pushed by ngraham into branch 'master'.

runners/spellchecker: Fix config group name mismatch

We would write in a different group than we read. This was caused by the renaming
of the plugin id, which was needed to fix another bug.

M  +1    -0    runners/spellchecker/CMakeLists.txt
M  +2    -2    runners/spellchecker/spellcheck_config.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/aecc2331dbe059a27fb485c7e902d20c6f611c9c
Comment 7 Nate Graham 2022-10-24 21:31:59 UTC
Git commit 2d1f7f4280fe5c5b2dc76a61f1c57488af359562 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 24/10/2022 at 21:31.
Pushed by ngraham into branch 'Plasma/5.26'.

runners/spellchecker: Fix config group name mismatch

We would write in a different group than we read. This was caused by the renaming
of the plugin id, which was needed to fix another bug.


(cherry picked from commit aecc2331dbe059a27fb485c7e902d20c6f611c9c)

M  +1    -0    runners/spellchecker/CMakeLists.txt
M  +2    -2    runners/spellchecker/spellcheck_config.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/2d1f7f4280fe5c5b2dc76a61f1c57488af359562