runners/spellchecker: Fix config group name mismatch

We would write in a different group than we read. This was caused by the renaming
of the plugin id, which was needed to fix another bug.

BUG: 460899


(cherry picked from commit aecc2331dbe059a27fb485c7e902d20c6f611c9c)