runners/spellchecker/spellcheck_config.cpp
@@ -59,7 +59,7 @@ void SpellCheckConfig::load()
 
     // FIXME: This shouldn't be hardcoded!
     const KSharedConfig::Ptr cfg = KSharedConfig::openConfig(QStringLiteral("krunnerrc"));
-    const KConfigGroup grp = cfg->group("Runners").group("Spell Checker");
+    const KConfigGroup grp = cfg->group("Runners").group(KRUNNER_PLUGIN_NAME);
 
     const bool requireTrigger = grp.readEntry("requireTriggerWord", true);
     const QString trigger = grp.readEntry("trigger", i18n("spell"));
@@ -78,7 +78,7 @@ void SpellCheckConfig::save()
 {
     // FIXME: This shouldn't be hardcoded!
     KSharedConfig::Ptr cfg = KSharedConfig::openConfig(QStringLiteral("krunnerrc"));
-    KConfigGroup grp = cfg->group("Runners").group("Spell Checker");
+    KConfigGroup grp = cfg->group("Runners").group(KRUNNER_PLUGIN_NAME);
 
     bool requireTrigger = m_ui->m_requireTriggerWord->checkState() == Qt::Checked;
     if (requireTrigger) {
